# nuwe-timer-app

./: .gitignore  CMakeLists.txt  nuwe-timer-app.pri  nuwe_timer_configure.h.in
cmake/: nuwe_find_python3.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.pro  check_task.cpp  check_task.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  python_command.h  python_engine.cpp  python_engine.h
src/app/nwpc-sms-collector/: sms_collector.py  sms_node_variable.py
src/app/nwpc-sms-collector/conf/: node.conf.json
src/app/nwpc-sms-collector/tests/: test_sms_node_variable.py
src/app/nwpc-sms-collector/tests/data/: error_login_cdp.txt  error_node_path_cdp.txt  error_sms_server_cdp.txt  normal_cdp.txt  normal_family_cdp.txt  normal_task_cdp.txt
src/libs/: CMakeLists.txt  libs.pro
src/libs/core/: CMakeLists.txt  core.pro  core_global.h  node.cpp  node.h  node_state.cpp  node_state.h  sms_checker.cpp  sms_checker.h  sms_task.cpp  sms_task.h  task.cpp  task.h  time_trigger.cpp  time_trigger.h  trigger.cpp  trigger.h
src/libs/progress_util/: CMakeLists.txt  async_job.cpp  async_job.h  progress_util.cpp  progress_util.h  progress_util.pro  progress_util_global.h  shell_command.cpp  shell_command.h  synchronous_job.cpp  synchronous_job.h
src/libs/python_env/: CMakeLists.txt  python_command.cpp  python_command.h  python_engine.h  python_env.pro  python_env_global.h
tests/auto/: CMakeLists.txt  auto.pro  gtest_dependency.pri
tests/auto/libs/core/: CMakeLists.txt  core.pro  test_core.pri
tests/auto/libs/core/checker/: CMakeLists.txt  checker.pro  main.cpp  tst_test_sms_checker.h
tests/auto/libs/core/node/: CMakeLists.txt  node.pro  tst_node_test.cpp
tests/auto/libs/core/node_state/: CMakeLists.txt  tst_node_state_test.cpp
tests/auto/libs/core/task/: CMakeLists.txt  task.pro  tst_task_test.cpp
tests/auto/libs/core/trigger/: CMakeLists.txt  main.cpp  trigger.pro  tst_test_time_trigger.h
tests/libs/core/: core.pro  test_core.pri
tests/libs/core/node_state/: node_state.pro
tests/libs/core/task/: tst_task_test.cpp
